package com.sidekick.opt_pal.ui

object UiTestTags {
    const val LOGIN_EMAIL_FIELD = "login_email_field"
    const val LOGIN_PASSWORD_FIELD = "login_password_field"
    const val LOGIN_BUTTON = "login_primary_button"
    const val LOGIN_REGISTER_BUTTON = "login_register_button"
    const val LOGIN_ERROR_TEXT = "login_error_text"

    const val SETUP_INITIAL_CHIP = "setup_initial_chip"
    const val SETUP_STEM_CHIP = "setup_stem_chip"
    const val SETUP_DATE_FIELD = "setup_date_field"
    const val SETUP_END_DATE_FIELD = "setup_end_date_field"
    const val SETUP_SAVE_BUTTON = "setup_save_button"
    const val SETUP_SCAN_BUTTON = "setup_scan_button"
    const val SETUP_UPLOAD_BUTTON = "setup_upload_button"
    const val SETUP_USE_VAULT_BUTTON = "setup_use_vault_button"
    const val SETUP_SKIP_MANUAL_BUTTON = "setup_skip_manual_button"
    const val SETUP_USE_SELECTED_DOCS_BUTTON = "setup_use_selected_docs_button"
    const val SETUP_SEVIS_FIELD = "setup_sevis_field"
    const val SETUP_SCHOOL_FIELD = "setup_school_field"
    const val SETUP_CIP_FIELD = "setup_cip_field"
    const val SETUP_MAJOR_FIELD = "setup_major_field"

    const val DASHBOARD_GREETING = "dashboard_greeting"
    const val DASHBOARD_REPORTING_CARD = "dashboard_reporting_card"
    const val DASHBOARD_VAULT_CARD = "dashboard_vault_card"
    const val DASHBOARD_UNEMPLOYMENT_CARD = "dashboard_unemployment_card"
    const val DASHBOARD_EMPLOYMENT_LIST = "dashboard_employment_list"
    const val DASHBOARD_FAB = "dashboard_fab"
    const val DASHBOARD_COUNTER_STATUS = "dashboard_counter_status"
    const val DASHBOARD_COUNTER_ACTION = "dashboard_counter_action"
    const val DASHBOARD_USCIS_SUMMARY = "dashboard_uscis_summary"
    const val DASHBOARD_TAX_REFUND_CARD = "dashboard_tax_refund_card"
    const val DASHBOARD_TRAVEL_ADVISOR_CARD = "dashboard_travel_advisor_card"
    const val DASHBOARD_I983_CARD = "dashboard_i983_card"
    const val DASHBOARD_POLICY_ALERTS_CARD = "dashboard_policy_alerts_card"
    const val DASHBOARD_POLICY_ALERT_SUMMARY = "dashboard_policy_alert_summary"
    const val DASHBOARD_COMPLIANCE_CARD = "dashboard_compliance_card"
    const val DASHBOARD_H1B_CARD = "dashboard_h1b_card"
    const val DASHBOARD_PEER_DATA_CARD = "dashboard_peer_data_card"
    const val DASHBOARD_SCENARIO_CARD = "dashboard_scenario_card"

    const val CASE_STATUS_RECEIPT_FIELD = "case_status_receipt_field"
    const val CASE_STATUS_ADD_BUTTON = "case_status_add_button"
    const val CASE_STATUS_LIST = "case_status_list"
    const val CASE_STATUS_DETAIL = "case_status_detail"
    const val CASE_STATUS_REFRESH_BUTTON = "case_status_refresh_button"
    const val CASE_STATUS_ARCHIVE_BUTTON = "case_status_archive_button"
    const val CASE_STATUS_REMOVE_BUTTON = "case_status_remove_button"
    const val CASE_STATUS_NOTIFICATIONS_BUTTON = "case_status_notifications_button"
    const val CASE_STATUS_ERROR = "case_status_error"

    const val TAX_REFUND_SOURCE_STEP = "tax_refund_source_step"
    const val TAX_REFUND_UPLOAD_BUTTON = "tax_refund_upload_button"
    const val TAX_REFUND_USE_SELECTED_BUTTON = "tax_refund_use_selected_button"
    const val TAX_REFUND_ELIGIBILITY_STEP = "tax_refund_eligibility_step"
    const val TAX_REFUND_FIRST_YEAR_FIELD = "tax_refund_first_year_field"
    const val TAX_REFUND_EVALUATE_BUTTON = "tax_refund_evaluate_button"
    const val TAX_REFUND_EMPLOYER_STEP = "tax_refund_employer_step"
    const val TAX_REFUND_EMPLOYER_PACKET_BUTTON = "tax_refund_employer_packet_button"
    const val TAX_REFUND_IRS_STEP = "tax_refund_irs_step"
    const val TAX_REFUND_SSN_FIELD = "tax_refund_ssn_field"
    const val TAX_REFUND_EIN_FIELD = "tax_refund_ein_field"
    const val TAX_REFUND_ADDRESS_FIELD = "tax_refund_address_field"
    const val TAX_REFUND_IRS_PACKET_BUTTON = "tax_refund_irs_packet_button"
    const val TAX_REFUND_COMPLETE_STEP = "tax_refund_complete_step"

    const val ADD_EMPLOYER_FIELD = "add_employer_field"
    const val ADD_JOB_TITLE_FIELD = "add_job_title_field"
    const val ADD_HOURS_FIELD = "add_hours_field"
    const val ADD_HOURS_WARNING = "add_hours_warning"
    const val ADD_START_DATE_FIELD = "add_start_date_field"
    const val ADD_END_DATE_FIELD = "add_end_date_field"
    const val ADD_SAVE_BUTTON = "add_save_button"
    const val ADD_ERROR_TEXT = "add_error_text"

    const val REPORTING_ACTION_SECTION = "reporting_action_section"
    const val REPORTING_MANUAL_SECTION = "reporting_manual_section"
    const val REPORTING_START_WIZARD_BUTTON = "reporting_start_wizard_button"
    const val REPORTING_CONTINUE_WIZARD_BUTTON = "reporting_continue_wizard_button"

    const val REPORTING_WIZARD_EVENT_STEP = "reporting_wizard_event_step"
    const val REPORTING_WIZARD_DETAILS_STEP = "reporting_wizard_details_step"
    const val REPORTING_WIZARD_REVIEW_STEP = "reporting_wizard_review_step"
    const val REPORTING_WIZARD_EVENT_CONTINUE = "reporting_wizard_event_continue"
    const val REPORTING_WIZARD_GENERATE = "reporting_wizard_generate"
    const val REPORTING_WIZARD_COMPLETE = "reporting_wizard_complete"
    const val REPORTING_WIZARD_MAJOR_FIELD = "reporting_wizard_major_field"
    const val REPORTING_WIZARD_DUTIES_FIELD = "reporting_wizard_duties_field"
    const val REPORTING_WIZARD_DRAFT_FIELD = "reporting_wizard_draft_field"
    const val REPORTING_WIZARD_WARNING = "reporting_wizard_warning"

    const val FEEDBACK_MESSAGE = "feedback_message_field"
    const val FEEDBACK_RATING = "feedback_rating_slider"
    const val FEEDBACK_SUBMIT = "feedback_submit_button"

    const val TRAVEL_DESTINATION_FIELD = "travel_destination_field"
    const val TRAVEL_RUN_ASSESSMENT_BUTTON = "travel_run_assessment_button"
    const val TRAVEL_OUTCOME_CARD = "travel_outcome_card"
    const val TRAVEL_LOCKED_PREVIEW = "travel_locked_preview"
    const val TRAVEL_UPLOAD_MISSING_BUTTON = "travel_upload_missing_button"

    const val POLICY_ALERT_FILTER_ROW = "policy_alert_filter_row"
    const val POLICY_ALERT_FEED_LIST = "policy_alert_feed_list"
    const val POLICY_ALERT_DETAIL = "policy_alert_detail"
    const val POLICY_ALERT_NOTIFICATIONS_BUTTON = "policy_alert_notifications_button"

    const val COMPLIANCE_HEALTH_SCREEN = "compliance_health_screen"
    const val COMPLIANCE_HEALTH_FACTOR_LIST = "compliance_health_factor_list"

    const val I983_SCREEN = "i983_screen"
    const val I983_LOCKED_PREVIEW = "i983_locked_preview"
    const val I983_WORKFLOW_SELECTOR = "i983_workflow_selector"
    const val I983_REVIEW_EXPORT_SECTION = "i983_review_export_section"

    const val VISA_PATHWAY_SCREEN = "visa_pathway_screen"
    const val VISA_PATHWAY_LOCKED_PREVIEW = "visa_pathway_locked_preview"
    const val VISA_PATHWAY_QUESTIONNAIRE = "visa_pathway_questionnaire"
    const val VISA_PATHWAY_CARD_LIST = "visa_pathway_card_list"
    const val DASHBOARD_VISA_PATHWAY_CARD = "dashboard_visa_pathway_card"
    const val DASHBOARD_VISA_PATHWAY_SUMMARY = "dashboard_visa_pathway_summary"
    const val H1B_DASHBOARD_SCREEN = "h1b_dashboard_screen"
    const val SCENARIO_SIMULATOR_SCREEN = "scenario_simulator_screen"
    const val PEER_DATA_SCREEN = "peer_data_screen"
}
